# multi-modal-gripper

./: README.md
FeeTech/SCServo_Linux_C++/: WritePos.cpp  编译说明.txt
FeeTech/SCServo_Python/: ping.py  read_write.py
LX-15D/: CMakeLists.txt  README.md  servo_motor.cpp  servo_motor.h  servo_motor_test_on_linux.cpp  servo_motor_test_on_windows.cpp
